Attempt at spacing the modal correctly on Brave Android after hard refresh

--- a/components/ModalElement/modal-element.css
+++ b/components/ModalElement/modal-element.css
@@ -101,10 +101,7 @@ hr {
   }
 }
 @media (hover: none) and (pointer: coarse) {
-  .modal-dialog {
-    max-height: 70vh;
-  }
   .modal-header-and-body {
-    transform: translateY(1.5rem);
+    padding-top: 1.5rem;
   }
 }
